<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:paddingStart="10dp"
            android:text="@string/address"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/office"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:paddingStart="10dp"
            android:text="@string/office"
            app:layout_constraintTop_toBottomOf="@+id/address"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/birthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:paddingStart="10dp"
            android:text="@string/birthday"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/office" />

        <TextView
            android:id="@+id/end_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:paddingStart="10dp"
            android:text="@string/end_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/birthday" />

        <TextView
            android:id="@+id/gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:paddingStart="10dp"
            android:text="@string/gender"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/end_date" />

        <TextView
            android:id="@+id/sortname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:paddingStart="10dp"
            android:text="@string/sortname"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gender" />

        <TextView
            android:id="@+id/website"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:paddingStart="10dp"
            android:text="@string/website"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sortname"/>

        <TextView
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:paddingStart="10dp"
            android:text="@string/phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/website"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/viewHolder"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:id="@+id/layoutProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/viewHolder"
            app:layout_constraintTop_toBottomOf="@+id/viewHolder">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="15dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="10dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="230dp">

                    <TextView
                        android:id="@+id/tvName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="64dp"
                        android:gravity="center"
                        android:text="@string/senatorName"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:layout_editor_absoluteX="0dp" />


                    <TextView
                        android:id="@+id/tvEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="88dp"
                        android:gravity="center"
                        android:text="Email"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintTop_toBottomOf="@+id/tvName"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:layout_editor_absoluteX="0dp" />


                    <TextView
                        android:id="@+id/tvRole1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="56dp"
                        android:layout_marginTop="12dp"
                        android:gravity="center"
                        android:text="@string/Role"
                        android:textColor="@color/colorPrimary"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvEmail" />

                    <TextView
                        android:id="@+id/tvRole"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="56dp"
                        android:layout_marginTop="32dp"
                        android:gravity="center"
                        android:text="@string/Role"
                        android:textColor="@color/colorPrimary"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvEmail" />

                    <TextView
                        android:id="@+id/tvParty1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:gravity="center"
                        android:text="Party"
                        android:textColor="@color/colorPrimary"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.725"
                        app:layout_constraintStart_toEndOf="@+id/tvRole"
                        app:layout_constraintTop_toBottomOf="@+id/tvEmail" />

                    <TextView
                        android:id="@+id/tvParty"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:gravity="center"
                        android:text="Party"
                        android:textColor="@color/colorPrimary"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.725"
                        app:layout_constraintStart_toEndOf="@+id/tvRole"
                        app:layout_constraintTop_toBottomOf="@+id/tvEmail" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/imageProfile"
                        android:layout_width="85dp"
                        android:layout_height="53dp"
                        android:layout_marginTop="4dp"
                        app:layout_constraintBottom_toTopOf="@+id/tvName"
                        android:src="@drawable/republican_party"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:riv_border_width="1dp"
                        app:civ_border_width="2dp"
                        app:civ_border_color="#FF000000"
                        app:riv_oval="true" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/icon_email"
                        android:layout_width="70dp"
                        android:layout_height="45dp"
                        android:layout_marginTop="4dp"
                        android:src="@drawable/phone"
                        app:civ_border_color="#FF000000"
                        app:civ_border_width="2dp"
                        app:layout_constraintStart_toEndOf="@+id/tvRole"
                        app:layout_constraintTop_toBottomOf="@+id/tvRole"
                        app:riv_border_width="1dp"
                        app:riv_oval="true" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/chat"
                        android:layout_width="70dp"
                        android:layout_height="45dp"
                        android:layout_marginTop="4dp"
                        android:src="@drawable/chat"
                        app:civ_border_color="#FF000000"
                        app:civ_border_width="2dp"
                        app:layout_constraintStart_toEndOf="@+id/icon_email"
                        app:layout_constraintTop_toBottomOf="@+id/tvParty"
                        app:riv_border_width="1dp"
                        app:riv_oval="true" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/message"
                        android:layout_width="70dp"
                        android:layout_height="45dp"
                        android:layout_marginTop="4dp"
                        android:src="@drawable/message"
                        app:civ_border_color="#FF000000"
                        app:civ_border_width="2dp"
                        app:layout_constraintStart_toEndOf="@+id/chat"
                        app:layout_constraintTop_toBottomOf="@+id/tvParty"
                        app:riv_border_width="1dp"
                        app:riv_oval="true" />





                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:foregroundGravity="bottom|right"
        tools:ignore="MissingConstraints">

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>